<resources>
    <string name="app_name">Cryptop</string>
    <string name="about">About</string>
    <string name="hello">Connexion au compte</string>
    <string name="email">E-mail</string>
    <string name="sign_in_account">Bievenue ! Connectez-vous avec votre e-mail</string>
    <string name="connection">Connexion</string>
    <string name="email_address_hint">Adresse mail</string>
    <string name="matricule_text">53735</string>
    <string name="matricule">Matricule</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="nom_text">Grégoire</string>
    <string name="prenom_text">Bryan</string>
    <string name="developer_application">Développeur de l\'application</string>
    <string name="mail_format">email : %s</string>
    <string name="slogan">Cryptop, le top des Cryptos</string>
    <string name="header_text">Crypto Currencies</string>
    <string name="top_500">Top 500</string>
    <string name="top_200">Top 200</string>
    <string name="top_100">Top 100</string>
    <string name="symbol">Symbol :</string>
    <string name="rank">Market Rank :</string>
    <string name="price_change_24h">Price change 24h :</string>
    <string name="volume_24h">Volume 24h :</string>
    <string name="total_supply">Total Supply :</string>
    <string name="circulating_supply">Circulating Supply :</string>
    <string name="max_supply">Max Supply :</string>
    <string name="market_cap">Market Cap :</string>
    <string name="price">Price :</string>
    <string name="display_price">$%,.2f</string>
    <string name="display_percentage">%2$.2f %1$s</string>
    <string name="favorites">Favorites</string>
</resources>