<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="g53735.mobg5.cryptop.about.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/matriculeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/matricule_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/matricule"
            app:layout_constraintStart_toEndOf="@+id/matricule" />

        <TextView
            android:id="@+id/matricule"
            style="@style/matriculeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/matricule"
            app:layout_constraintStart_toStartOf="@+id/developerText"
            app:layout_constraintTop_toBottomOf="@+id/developerText" />

        <TextView
            android:id="@+id/nom"
            style="@style/matriculeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nom"
            app:layout_constraintStart_toStartOf="@+id/matricule"
            app:layout_constraintTop_toBottomOf="@+id/matricule" />

        <TextView
            android:id="@+id/nom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/nom"
            app:layout_constraintStart_toStartOf="@+id/matriculeText" />

        <TextView
            android:id="@+id/prenom"
            style="@style/matriculeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prenom"
            app:layout_constraintStart_toStartOf="@+id/nom"
            app:layout_constraintTop_toBottomOf="@+id/nom" />

        <TextView
            android:id="@+id/prenomText"
            android:layout_width="40dp"
            android:layout_height="21dp"
            android:text="@string/prenom_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/prenom"
            app:layout_constraintStart_toStartOf="@+id/nom_text" />

        <TextView
            android:id="@+id/developerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/developer_application"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>