<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="g53735.mobg5.myapplication.connection.ConnectionFragment">

    <data>
        <variable
            name="connectionViewModel"
            type="g53735.mobg5.myapplication.connection.ConnectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/connectionButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/connection"
            android:textStyle="bold"
            android:onClick="@{() -> connectionViewModel.onConnection()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_editText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginTop"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginEnd="@dimen/marginTop"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/sign_in_account"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/title_text"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="43dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/email_editText"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>