<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="g53735.mobg5.cryptop.detail.CryptoDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_crypto_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#de000000"
            android:textSize="39sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cryptoNameString="@{viewModel.crypto}"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/price_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:cryptoSymbolString="@{viewModel.crypto}"
            tools:text="BTC" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:text="@string/symbol"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_crypto_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/rank"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/price"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/market_cap"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/max_supply"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/circulating_supply"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/total_supply"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/volume_24h"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/price_change_24h"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:cryptoRankString="@{viewModel.crypto}"
            tools:text="#1"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:cryptoPriceString="@{viewModel.crypto}"
            tools:text="$43,716.54"/>

        <TextView
            android:id="@+id/market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:cryptoMarketCapString="@{viewModel.crypto}"
            tools:text="827,155,998,794"/>

        <TextView
            android:id="@+id/max_supply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:cryptoMaxSupplyString="@{viewModel.crypto}"
            tools:text="21,000,000" />

        <TextView
            android:id="@+id/circulating_supply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:cryptoCirculatingSupplyString="@{viewModel.crypto}"
            tools:text="18,920,893.00" />

        <TextView
            android:id="@+id/total_supply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:cryptoTotalSupplyString="@{viewModel.crypto}"
            tools:text="18,920,893"/>

        <TextView
            android:id="@+id/volume_24H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:cryptoVolumeString="@{viewModel.crypto}"
            tools:text="25 000 000"/>

        <TextView
            android:id="@+id/price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#de000000"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:cryptoPriceChangeString="@{viewModel.crypto}"
            tools:text="-1.89%"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>